ros2_ws/log/build_2021-05-19_13-47-47/robot_description/stderr.log
  File "/home/mpt/Desktop/assgn2/ros2_ws/install/robot_description/lib/python3.8/site-packages/robot_description/user_input.py", line 198
    my_node.get_logger().info('running')
    ^
SyntaxError: invalid syntax

